y.output
State 0 conflicts: 1 shift/reduce
State 5 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 24 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 107 conflicts: 5 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 182 conflicts: 1 shift/reduce
State 193 conflicts: 1 shift/reduce
State 198 conflicts: 1 shift/reduce
State 206 conflicts: 1 shift/reduce
State 207 conflicts: 1 shift/reduce
State 208 conflicts: 1 shift/reduce
State 209 conflicts: 1 shift/reduce
State 210 conflicts: 1 shift/reduce
State 211 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Block '.'

    2 Block: ConstDecl VarDecl ArrayDecl ProcDecl FuncDecl Statement

    3 ConstDecl: CONST ConstAssignmentList ';'
    4          | ε
    5          | error ';'

    6 ConstAssignmentList: IDENTIFIER EQ NUMBER
    7                    | ARRAY IDENTIFIER EQ '[' ConstArray ']'
    8                    | ConstAssignmentList ',' IDENTIFIER EQ NUMBER
    9                    | ConstAssignmentList ',' ARRAY IDENTIFIER EQ '[' ConstArray ']'

   10 VarDecl: VAR IdentifierList ';'
   11        | ε
   12        | error ';'

   13 ArrayDecl: ARRAY IdentifierList ';'
   14          | error ';'
   15          | ε

   16 IdentifierList: IDENTIFIER
   17               | IdentifierList ',' IDENTIFIER
   18               | ε

   19 ProcDecl: ProcDecl PROCEDURE IDENTIFIER ';' Block ';'
   20         | error ';'
   21         | ε

   22 FuncDecl: FUNCTION IDENTIFIER '(' IdentifierList ')' ';' Block ';'
   23         | error ';'
   24         | ε

   25 Statement: IDENTIFIER ASGN Expression
   26          | IDENTIFIER ASGN '[' GeneralList ']'
   27          | IDENTIFIER '[' NUMBER ']' ASGN Expression
   28          | CALL IDENTIFIER
   29          | FuncCall
   30          | BEGN StatementList END
   31          | ConditionalStatement
   32          | LoopStatement
   33          | ControlStatement
   34          | IOStatement
   35          | ε

   36 ConditionalStatement: IF Condition THEN Statement
   37                     | IF Condition THEN Statement ELSE Statement
   38                     | error Condition THEN Statement
   39                     | IF Condition error Statement
   40                     | error Condition THEN Statement ELSE Statement
   41                     | IF Condition error Statement ELSE Statement
   42                     | IF Condition THEN Statement error Statement

   43 LoopStatement: WHILE Condition DO Statement
   44              | error Condition DO Statement
   45              | WHILE Condition error Statement
   46              | FOR IDENTIFIER UPTO Expression DO Statement
   47              | FOR IDENTIFIER DOWNTO Expression DO Statement
   48              | error Expression DO Statement
   49              | FOR IDENTIFIER UPTO Expression error Statement
   50              | FOR IDENTIFIER DOWNTO Expression error Statement

   51 IOStatement: READ '(' IDENTIFIER ')'
   52            | WRITE '(' IDENTIFIER ')'
   53            | WRITELINE '(' IDENTIFIER ')'
   54            | READ '(' error ')'
   55            | WRITE '(' error ')'
   56            | WRITELINE '(' error ')'

   57 FuncCall: CALL IDENTIFIER '(' GeneralList ')'
   58         | error IDENTIFIER '(' GeneralList ')'
   59         | CALL error '(' GeneralList ')'
   60         | CALL IDENTIFIER error GeneralList ')'
   61         | CALL IDENTIFIER '(' GeneralList error

   62 ControlStatement: BREAK
   63                 | RETURN
   64                 | RETURN Expression

   65 StatementList: Statement
   66              | StatementList ';' Statement

   67 $@1: ε

   68 StatementList: StatementList error $@1 Statement

   69 Condition: ODD Expression
   70          | Expression EQ Expression
   71          | Expression IDK Expression
   72          | Expression GT Expression
   73          | Expression LT Expression
   74          | Expression LEQ Expression
   75          | Expression GEQ Expression
   76          | Expression ASGN Expression

   77 ConstArray: NUMBER
   78           | ConstArray ',' NUMBER
   79           | ConstArray error NUMBER

   80 GeneralList: NUMBER
   81            | IDENTIFIER
   82            | GeneralList ',' NUMBER
   83            | GeneralList ',' IDENTIFIER
   84            | GeneralList error NUMBER
   85            | GeneralList error IDENTIFIER
   86            | ε

   87 Expression: Expression '+' Expression
   88           | Expression '-' Expression
   89           | Expression '*' Expression
   90           | Expression '/' Expression
   91           | Expression '%' Expression
   92           | '+' Expression
   93           | '-' Expression
   94           | error Expression
   95           | IDENTIFIER
   96           | IDENTIFIER '[' NUMBER ']'
   97           | NUMBER
   98           | '(' Expression ')'
   99           | FuncCall


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 91
    '(' (40) 22 51 52 53 54 55 56 57 58 59 61 98
    ')' (41) 22 51 52 53 54 55 56 57 58 59 60 98
    '*' (42) 89
    '+' (43) 87 92
    ',' (44) 8 9 17 78 82 83
    '-' (45) 88 93
    '.' (46) 1
    '/' (47) 90
    ';' (59) 3 5 10 12 13 14 19 20 22 23 66
    '[' (91) 7 9 26 27 96
    ']' (93) 7 9 26 27 96
    error (256) 5 12 14 20 23 38 39 40 41 42 44 45 48 49 50 54 55 56 58 59 60 61 68 79 84 85 94
    NUMBER (258) 6 8 27 77 78 79 80 82 84 96 97
    IDENTIFIER (259) 6 7 8 9 16 17 19 22 25 26 27 28 46 47 49 50 51 52 53 57 58 60 61 81 83 85 95 96
    CONST (260) 3
    VAR (261) 10
    ARRAY (262) 7 9 13
    PROCEDURE (263) 19
    FUNCTION (264) 22
    CALL (265) 28 57 59 60 61
    BEGN (266) 30
    END (267) 30
    IF (268) 36 37 39 41 42
    THEN (269) 36 37 38 40 42
    ELSE (270) 37 40 41
    WHILE (271) 43 45
    DO (272) 43 44 46 47 48
    FOR (273) 46 47 49 50
    UPTO (274) 46 49
    DOWNTO (275) 47 50
    BREAK (276) 62
    RETURN (277) 63 64
    READ (278) 51 54
    WRITE (279) 52 55
    WRITELINE (280) 53 56
    ODD (281) 69
    EQ (282) 6 7 8 9 70
    IDK (283) 71
    GT (284) 72
    LT (285) 73
    GEQ (286) 75
    LEQ (287) 74
    ASGN (288) 25 26 27 76
    IFX (289)
    UMINUS (290)
    UPLUS (291)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    Program (50)
        on left: 1
        on right: 0
    Block (51)
        on left: 2
        on right: 1 19 22
    ConstDecl (52)
        on left: 3 4 5
        on right: 2
    ConstAssignmentList (53)
        on left: 6 7 8 9
        on right: 3 8 9
    VarDecl (54)
        on left: 10 11 12
        on right: 2
    ArrayDecl (55)
        on left: 13 14 15
        on right: 2
    IdentifierList (56)
        on left: 16 17 18
        on right: 10 13 17 22
    ProcDecl (57)
        on left: 19 20 21
        on right: 2 19
    FuncDecl (58)
        on left: 22 23 24
        on right: 2
    Statement (59)
        on left: 25 26 27 28 29 30 31 32 33 34 35
        on right: 2 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 65 66 68
    ConditionalStatement (60)
        on left: 36 37 38 39 40 41 42
        on right: 31
    LoopStatement (61)
        on left: 43 44 45 46 47 48 49 50
        on right: 32
    IOStatement (62)
        on left: 51 52 53 54 55 56
        on right: 34
    FuncCall (63)
        on left: 57 58 59 60 61
        on right: 29 99
    ControlStatement (64)
        on left: 62 63 64
        on right: 33
    StatementList (65)
        on left: 65 66 68
        on right: 30 66 68
    $@1 (66)
        on left: 67
        on right: 68
    Condition (67)
        on left: 69 70 71 72 73 74 75 76
        on right: 36 37 38 39 40 41 42 43 44 45
    ConstArray (68)
        on left: 77 78 79
        on right: 7 9 78 79
    GeneralList (69)
        on left: 80 81 82 83 84 85 86
        on right: 26 57 58 59 60 61 82 83 84 85
    Expression (70)
        on left: 87 88 89 90 91 92 93 94 95 96 97 98 99
        on right: 25 27 46 47 48 49 50 64 69 70 71 72 73 74 75 76 87 88 89 90 91 92 93 94 98


State 0

    0 $accept: • Program $end

    error  shift, and go to state 1
    CONST  shift, and go to state 2

    error       [reduce using rule 4 (ConstDecl)]
    IDENTIFIER  reduce using rule 4 (ConstDecl)
    VAR         reduce using rule 4 (ConstDecl)
    ARRAY       reduce using rule 4 (ConstDecl)
    PROCEDURE   reduce using rule 4 (ConstDecl)
    FUNCTION    reduce using rule 4 (ConstDecl)
    CALL        reduce using rule 4 (ConstDecl)
    BEGN        reduce using rule 4 (ConstDecl)
    IF          reduce using rule 4 (ConstDecl)
    WHILE       reduce using rule 4 (ConstDecl)
    FOR         reduce using rule 4 (ConstDecl)
    BREAK       reduce using rule 4 (ConstDecl)
    RETURN      reduce using rule 4 (ConstDecl)
    READ        reduce using rule 4 (ConstDecl)
    WRITE       reduce using rule 4 (ConstDecl)
    WRITELINE   reduce using rule 4 (ConstDecl)
    '.'         reduce using rule 4 (ConstDecl)

    Program    go to state 3
    Block      go to state 4
    ConstDecl  go to state 5


State 1

    5 ConstDecl: error • ';'

    ';'  shift, and go to state 6


State 2

    3 ConstDecl: CONST • ConstAssignmentList ';'

    IDENTIFIER  shift, and go to state 7
    ARRAY       shift, and go to state 8

    ConstAssignmentList  go to state 9


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 10


State 4

    1 Program: Block • '.'

    '.'  shift, and go to state 11


State 5

    2 Block: ConstDecl • VarDecl ArrayDecl ProcDecl FuncDecl Statement

    error  shift, and go to state 12
    VAR    shift, and go to state 13

    error       [reduce using rule 11 (VarDecl)]
    IDENTIFIER  reduce using rule 11 (VarDecl)
    ARRAY       reduce using rule 11 (VarDecl)
    PROCEDURE   reduce using rule 11 (VarDecl)
    FUNCTION    reduce using rule 11 (VarDecl)
    CALL        reduce using rule 11 (VarDecl)
    BEGN        reduce using rule 11 (VarDecl)
    IF          reduce using rule 11 (VarDecl)
    WHILE       reduce using rule 11 (VarDecl)
    FOR         reduce using rule 11 (VarDecl)
    BREAK       reduce using rule 11 (VarDecl)
    RETURN      reduce using rule 11 (VarDecl)
    READ        reduce using rule 11 (VarDecl)
    WRITE       reduce using rule 11 (VarDecl)
    WRITELINE   reduce using rule 11 (VarDecl)
    '.'         reduce using rule 11 (VarDecl)
    ';'         reduce using rule 11 (VarDecl)

    VarDecl  go to state 14


State 6

    5 ConstDecl: error ';' •

    $default  reduce using rule 5 (ConstDecl)


State 7

    6 ConstAssignmentList: IDENTIFIER • EQ NUMBER

    EQ  shift, and go to state 15


State 8

    7 ConstAssignmentList: ARRAY • IDENTIFIER EQ '[' ConstArray ']'

    IDENTIFIER  shift, and go to state 16


State 9

    3 ConstDecl: CONST ConstAssignmentList • ';'
    8 ConstAssignmentList: ConstAssignmentList • ',' IDENTIFIER EQ NUMBER
    9                    | ConstAssignmentList • ',' ARRAY IDENTIFIER EQ '[' ConstArray ']'

    ';'  shift, and go to state 17
    ','  shift, and go to state 18


State 10

    0 $accept: Program $end •

    $default  accept


State 11

    1 Program: Block '.' •

    $default  reduce using rule 1 (Program)


State 12

   12 VarDecl: error • ';'

    ';'  shift, and go to state 19


State 13

   10 VarDecl: VAR • IdentifierList ';'

    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 18 (IdentifierList)

    IdentifierList  go to state 21


State 14

    2 Block: ConstDecl VarDecl • ArrayDecl ProcDecl FuncDecl Statement

    error  shift, and go to state 22
    ARRAY  shift, and go to state 23

    error       [reduce using rule 15 (ArrayDecl)]
    IDENTIFIER  reduce using rule 15 (ArrayDecl)
    PROCEDURE   reduce using rule 15 (ArrayDecl)
    FUNCTION    reduce using rule 15 (ArrayDecl)
    CALL        reduce using rule 15 (ArrayDecl)
    BEGN        reduce using rule 15 (ArrayDecl)
    IF          reduce using rule 15 (ArrayDecl)
    WHILE       reduce using rule 15 (ArrayDecl)
    FOR         reduce using rule 15 (ArrayDecl)
    BREAK       reduce using rule 15 (ArrayDecl)
    RETURN      reduce using rule 15 (ArrayDecl)
    READ        reduce using rule 15 (ArrayDecl)
    WRITE       reduce using rule 15 (ArrayDecl)
    WRITELINE   reduce using rule 15 (ArrayDecl)
    '.'         reduce using rule 15 (ArrayDecl)
    ';'         reduce using rule 15 (ArrayDecl)

    ArrayDecl  go to state 24


State 15

    6 ConstAssignmentList: IDENTIFIER EQ • NUMBER

    NUMBER  shift, and go to state 25


State 16

    7 ConstAssignmentList: ARRAY IDENTIFIER • EQ '[' ConstArray ']'

    EQ  shift, and go to state 26


State 17

    3 ConstDecl: CONST ConstAssignmentList ';' •

    $default  reduce using rule 3 (ConstDecl)


State 18

    8 ConstAssignmentList: ConstAssignmentList ',' • IDENTIFIER EQ NUMBER
    9                    | ConstAssignmentList ',' • ARRAY IDENTIFIER EQ '[' ConstArray ']'

    IDENTIFIER  shift, and go to state 27
    ARRAY       shift, and go to state 28


State 19

   12 VarDecl: error ';' •

    $default  reduce using rule 12 (VarDecl)


State 20

   16 IdentifierList: IDENTIFIER •

    $default  reduce using rule 16 (IdentifierList)


State 21

   10 VarDecl: VAR IdentifierList • ';'
   17 IdentifierList: IdentifierList • ',' IDENTIFIER

    ';'  shift, and go to state 29
    ','  shift, and go to state 30


State 22

   14 ArrayDecl: error • ';'

    ';'  shift, and go to state 31


State 23

   13 ArrayDecl: ARRAY • IdentifierList ';'

    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 18 (IdentifierList)

    IdentifierList  go to state 32


State 24

    2 Block: ConstDecl VarDecl ArrayDecl • ProcDecl FuncDecl Statement

    error  shift, and go to state 33

    error       [reduce using rule 21 (ProcDecl)]
    IDENTIFIER  reduce using rule 21 (ProcDecl)
    PROCEDURE   reduce using rule 21 (ProcDecl)
    FUNCTION    reduce using rule 21 (ProcDecl)
    CALL        reduce using rule 21 (ProcDecl)
    BEGN        reduce using rule 21 (ProcDecl)
    IF          reduce using rule 21 (ProcDecl)
    WHILE       reduce using rule 21 (ProcDecl)
    FOR         reduce using rule 21 (ProcDecl)
    BREAK       reduce using rule 21 (ProcDecl)
    RETURN      reduce using rule 21 (ProcDecl)
    READ        reduce using rule 21 (ProcDecl)
    WRITE       reduce using rule 21 (ProcDecl)
    WRITELINE   reduce using rule 21 (ProcDecl)
    '.'         reduce using rule 21 (ProcDecl)
    ';'         reduce using rule 21 (ProcDecl)

    ProcDecl  go to state 34


State 25

    6 ConstAssignmentList: IDENTIFIER EQ NUMBER •

    $default  reduce using rule 6 (ConstAssignmentList)


State 26

    7 ConstAssignmentList: ARRAY IDENTIFIER EQ • '[' ConstArray ']'

    '['  shift, and go to state 35


State 27

    8 ConstAssignmentList: ConstAssignmentList ',' IDENTIFIER • EQ NUMBER

    EQ  shift, and go to state 36


State 28

    9 ConstAssignmentList: ConstAssignmentList ',' ARRAY • IDENTIFIER EQ '[' ConstArray ']'

    IDENTIFIER  shift, and go to state 37


State 29

   10 VarDecl: VAR IdentifierList ';' •

    $default  reduce using rule 10 (VarDecl)


State 30

   17 IdentifierList: IdentifierList ',' • IDENTIFIER

    IDENTIFIER  shift, and go to state 38


State 31

   14 ArrayDecl: error ';' •

    $default  reduce using rule 14 (ArrayDecl)


State 32

   13 ArrayDecl: ARRAY IdentifierList • ';'
   17 IdentifierList: IdentifierList • ',' IDENTIFIER

    ';'  shift, and go to state 39
    ','  shift, and go to state 30


State 33

   20 ProcDecl: error • ';'

    ';'  shift, and go to state 40


State 34

    2 Block: ConstDecl VarDecl ArrayDecl ProcDecl • FuncDecl Statement
   19 ProcDecl: ProcDecl • PROCEDURE IDENTIFIER ';' Block ';'

    error      shift, and go to state 41
    PROCEDURE  shift, and go to state 42
    FUNCTION   shift, and go to state 43

    error       [reduce using rule 24 (FuncDecl)]
    IDENTIFIER  reduce using rule 24 (FuncDecl)
    CALL        reduce using rule 24 (FuncDecl)
    BEGN        reduce using rule 24 (FuncDecl)
    IF          reduce using rule 24 (FuncDecl)
    WHILE       reduce using rule 24 (FuncDecl)
    FOR         reduce using rule 24 (FuncDecl)
    BREAK       reduce using rule 24 (FuncDecl)
    RETURN      reduce using rule 24 (FuncDecl)
    READ        reduce using rule 24 (FuncDecl)
    WRITE       reduce using rule 24 (FuncDecl)
    WRITELINE   reduce using rule 24 (FuncDecl)
    '.'         reduce using rule 24 (FuncDecl)
    ';'         reduce using rule 24 (FuncDecl)

    FuncDecl  go to state 44


State 35

    7 ConstAssignmentList: ARRAY IDENTIFIER EQ '[' • ConstArray ']'

    NUMBER  shift, and go to state 45

    ConstArray  go to state 46


State 36

    8 ConstAssignmentList: ConstAssignmentList ',' IDENTIFIER EQ • NUMBER

    NUMBER  shift, and go to state 47


State 37

    9 ConstAssignmentList: ConstAssignmentList ',' ARRAY IDENTIFIER • EQ '[' ConstArray ']'

    EQ  shift, and go to state 48


State 38

   17 IdentifierList: IdentifierList ',' IDENTIFIER •

    $default  reduce using rule 17 (IdentifierList)


State 39

   13 ArrayDecl: ARRAY IdentifierList ';' •

    $default  reduce using rule 13 (ArrayDecl)


State 40

   20 ProcDecl: error ';' •

    $default  reduce using rule 20 (ProcDecl)


State 41

   23 FuncDecl: error • ';'

    ';'  shift, and go to state 49


State 42

   19 ProcDecl: ProcDecl PROCEDURE • IDENTIFIER ';' Block ';'

    IDENTIFIER  shift, and go to state 50


State 43

   22 FuncDecl: FUNCTION • IDENTIFIER '(' IdentifierList ')' ';' Block ';'

    IDENTIFIER  shift, and go to state 51


State 44

    2 Block: ConstDecl VarDecl ArrayDecl ProcDecl FuncDecl • Statement

    error       shift, and go to state 52
    IDENTIFIER  shift, and go to state 53
    CALL        shift, and go to state 54
    BEGN        shift, and go to state 55
    IF          shift, and go to state 56
    WHILE       shift, and go to state 57
    FOR         shift, and go to state 58
    BREAK       shift, and go to state 59
    RETURN      shift, and go to state 60
    READ        shift, and go to state 61
    WRITE       shift, and go to state 62
    WRITELINE   shift, and go to state 63

    '.'  reduce using rule 35 (Statement)
    ';'  reduce using rule 35 (Statement)

    Statement             go to state 64
    ConditionalStatement  go to state 65
    LoopStatement         go to state 66
    IOStatement           go to state 67
    FuncCall              go to state 68
    ControlStatement      go to state 69


State 45

   77 ConstArray: NUMBER •

    $default  reduce using rule 77 (ConstArray)


State 46

    7 ConstAssignmentList: ARRAY IDENTIFIER EQ '[' ConstArray • ']'
   78 ConstArray: ConstArray • ',' NUMBER
   79           | ConstArray • error NUMBER

    error  shift, and go to state 70
    ']'    shift, and go to state 71
    ','    shift, and go to state 72


State 47

    8 ConstAssignmentList: ConstAssignmentList ',' IDENTIFIER EQ NUMBER •

    $default  reduce using rule 8 (ConstAssignmentList)


State 48

    9 ConstAssignmentList: ConstAssignmentList ',' ARRAY IDENTIFIER EQ • '[' ConstArray ']'

    '['  shift, and go to state 73


State 49

   23 FuncDecl: error ';' •

    $default  reduce using rule 23 (FuncDecl)


State 50

   19 ProcDecl: ProcDecl PROCEDURE IDENTIFIER • ';' Block ';'

    ';'  shift, and go to state 74


State 51

   22 FuncDecl: FUNCTION IDENTIFIER • '(' IdentifierList ')' ';' Block ';'

    '('  shift, and go to state 75


State 52

   38 ConditionalStatement: error • Condition THEN Statement
   40                     | error • Condition THEN Statement ELSE Statement
   44 LoopStatement: error • Condition DO Statement
   48              | error • Expression DO Statement
   58 FuncCall: error • IDENTIFIER '(' GeneralList ')'

    error       shift, and go to state 76
    NUMBER      shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    CALL        shift, and go to state 79
    ODD         shift, and go to state 80
    '+'         shift, and go to state 81
    '-'         shift, and go to state 82
    '('         shift, and go to state 83

    FuncCall    go to state 84
    Condition   go to state 85
    Expression  go to state 86


State 53

   25 Statement: IDENTIFIER • ASGN Expression
   26          | IDENTIFIER • ASGN '[' GeneralList ']'
   27          | IDENTIFIER • '[' NUMBER ']' ASGN Expression

    ASGN  shift, and go to state 87
    '['   shift, and go to state 88


State 54

   28 Statement: CALL • IDENTIFIER
   57 FuncCall: CALL • IDENTIFIER '(' GeneralList ')'
   59         | CALL • error '(' GeneralList ')'
   60         | CALL • IDENTIFIER error GeneralList ')'
   61         | CALL • IDENTIFIER '(' GeneralList error

    error       shift, and go to state 89
    IDENTIFIER  shift, and go to state 90


State 55

   30 Statement: BEGN • StatementList END

    error       shift, and go to state 52
    IDENTIFIER  shift, and go to state 53
    CALL        shift, and go to state 54
    BEGN        shift, and go to state 55
    IF          shift, and go to state 56
    WHILE       shift, and go to state 57
    FOR         shift, and go to state 58
    BREAK       shift, and go to state 59
    RETURN      shift, and go to state 60
    READ        shift, and go to state 61
    WRITE       shift, and go to state 62
    WRITELINE   shift, and go to state 63

    error  [reduce using rule 35 (Statement)]
    END    reduce using rule 35 (Statement)
    ';'    reduce using rule 35 (Statement)

    Statement             go to state 91
    ConditionalStatement  go to state 65
    LoopStatement         go to state 66
    IOStatement           go to state 67
    FuncCall              go to state 68
    ControlStatement      go to state 69
    StatementList         go to state 92


State 56

   36 ConditionalStatement: IF • Condition THEN Statement
   37                     | IF • Condition THEN Statement ELSE Statement
   39                     | IF • Condition error Statement
   41                     | IF • Condition error Statement ELSE Statement
   42                     | IF • Condition THEN Statement error Statement

    error       shift, and go to state 76
    NUMBER      shift, and go to state 77
    IDENTIFIER  shift, and go to state 93
    CALL        shift, and go to state 79
    ODD         shift, and go to state 80
    '+'         shift, and go to state 81
    '-'         shift, and go to state 82
    '('         shift, and go to state 83

    FuncCall    go to state 84
    Condition   go to state 94
    Expression  go to state 95


State 57

   43 LoopStatement: WHILE • Condition DO Statement
   45              | WHILE • Condition error Statement

    error       shift, and go to state 76
    NUMBER      shift, and go to state 77
    IDENTIFIER  shift, and go to state 93
    CALL        shift, and go to state 79
    ODD         shift, and go to state 80
    '+'         shift, and go to state 81
    '-'         shift, and go to state 82
    '('         shift, and go to state 83

    FuncCall    go to state 84
    Condition   go to state 96
    Expression  go to state 95


State 58

   46 LoopStatement: FOR • IDENTIFIER UPTO Expression DO Statement
   47              | FOR • IDENTIFIER DOWNTO Expression DO Statement
   49              | FOR • IDENTIFIER UPTO Expression error Statement
   50              | FOR • IDENTIFIER DOWNTO Expression error Statement

    IDENTIFIER  shift, and go to state 97


State 59

   62 ControlStatement: BREAK •

    $default  reduce using rule 62 (ControlStatement)


State 60

   63 ControlStatement: RETURN •
   64                 | RETURN • Expression

    error       shift, and go to state 76
    NUMBER      shift, and go to state 77
    IDENTIFIER  shift, and go to state 93
    CALL        shift, and go to state 79
    '+'         shift, and go to state 81
    '-'         shift, and go to state 82
    '('         shift, and go to state 83

    error  [reduce using rule 63 (ControlStatement)]
    END    reduce using rule 63 (ControlStatement)
    ELSE   reduce using rule 63 (ControlStatement)
    '.'    reduce using rule 63 (ControlStatement)
    ';'    reduce using rule 63 (ControlStatement)

    FuncCall    go to state 84
    Expression  go to state 98


State 61

   51 IOStatement: READ • '(' IDENTIFIER ')'
   54            | READ • '(' error ')'

    '('  shift, and go to state 99


State 62

   52 IOStatement: WRITE • '(' IDENTIFIER ')'
   55            | WRITE • '(' error ')'

    '('  shift, and go to state 100


State 63

   53 IOStatement: WRITELINE • '(' IDENTIFIER ')'
   56            | WRITELINE • '(' error ')'

    '('  shift, and go to state 101


State 64

    2 Block: ConstDecl VarDecl ArrayDecl ProcDecl FuncDecl Statement •

    $default  reduce using rule 2 (Block)


State 65

   31 Statement: ConditionalStatement •

    $default  reduce using rule 31 (Statement)


State 66

   32 Statement: LoopStatement •

    $default  reduce using rule 32 (Statement)


State 67

   34 Statement: IOStatement •

    $default  reduce using rule 34 (Statement)


State 68

   29 Statement: FuncCall •

    $default  reduce using rule 29 (Statement)


State 69

   33 Statement: ControlStatement •

    $default  reduce using rule 33 (Statement)


State 70

   79 ConstArray: ConstArray error • NUMBER

    NUMBER  shift, and go to state 102


State 71

    7 ConstAssignmentList: ARRAY IDENTIFIER EQ '[' ConstArray ']' •

    $default  reduce using rule 7 (ConstAssignmentList)


State 72

   78 ConstArray: ConstArray ',' • NUMBER

    NUMBER  shift, and go to state 103


State 73

    9 ConstAssignmentList: ConstAssignmentList ',' ARRAY IDENTIFIER EQ '[' • ConstArray ']'

    NUMBER  shift, and go to state 45

    ConstArray  go to state 104


State 74

   19 ProcDecl: ProcDecl PROCEDURE IDENTIFIER ';' • Block ';'

    error  shift, and go to state 1
    CONST  shift, and go to state 2
